# patent_client

./: pyproject.toml
src/patent_client/uspto/fulltext/: manager.py
